# broker

./: .gitignore  Dockerfile  LICENSE  README.md  build-cabal-initial.sh  build-cabal.sh  build.sh  default.nix  monto-broker.cabal  shell.nix  stack.yaml  start-cabal.sh  start-stack.sh  start.sh  startWebSockets.sh  startWithWebSockets.sh  startWithZeroMQ.sh
broker/: Main.hs
src/: Main.hs
src/Monto/: Automaton.hs  Broker.hs  CommandDescription.hs  CommandMessage.hs  CommandMessageDescription.hs  CommandUpdate.hs  ConfigurationMessage.hs  Dependency.hs  DependencyGraph.hs  DependencyGraphCommandMessages.hs  DependencyManager.hs  DeregisterService.hs  DiscoverRequest.hs  DiscoverResponse.hs  DynamicDependency.hs  DynamicDependencyManager.hs  Edge.hs  IDEMessages.hs  MessageStore.hs  MessagesIDE.hs  MessagesService.hs  Options.hs  ProductDependency.hs  ProductDescription.hs  ProductMessage.hs  RegisterCommandMessageDependencies.hs  RegisterDynamicDependencies.hs  RegisterServiceRequest.hs  RegisterServiceResponse.hs  Request.hs  Require.hs  ResourceManager.hs  ServerDependency.hs  Service.hs  ServiceDependency.hs  ServiceMessages.hs  Source.hs  SourceMessage.hs  StaticDependencyManager.hs  Subscription.hs  (+3 more)
src/Monto/Automaton/: Compiled.hs
test/: BrokerSpec.hs  DependencyGraphCommandMessagesSpec.hs
websockets/src/monto/broker/websocket/: Main.java  WebSocketPublisherProxy.java  WebSocketRequestProxy.java  WebSocketSubscriberProxy.java
