name:                monto-broker
version:             0.0.1
synopsis:            Haskell Broker for Monto that implements Service Dependencies.
license:             BSD3
license-file:        LICENSE
author:              Sven Keidel
maintainer:          svenkeidel@googlemail.com
category:            Editor
build-type:          Simple
cabal-version:       >=1.18
tested-with:         GHC == 7.8.3


library
  exposed-modules:     Monto.Broker,
                       Monto.VersionMessage,
                       Monto.ProductMessage,
                       Monto.ProductDependency,
                       Monto.ServerDependency
                       Monto.DependencyGraph,
                       Monto.ResourceManager,
                       Monto.Automaton,
                       Monto.DeregisterService,
                       Monto.RegisterServiceRequest,
                       Monto.RegisterServiceResponse,
                       Monto.Types
  build-depends:       base,
                       aeson,
                       bytestring,
                       containers,
                       fgl,
                       semigroups,
                       text,
                       vector,
                       websockets
  ghc-options:         -Wall
  hs-source-dirs:      src/
  default-language:    Haskell2010

executable broker
  main-is:             Main.hs
  ghc-options:         -Wall -threaded
  build-depends:       base,
                       aeson,
                       bytestring,
                       containers,
                       fgl,
                       monto-broker,
                       optparse-applicative,
                       text,
                       unix,
                       vector,
                       websockets,
                       zeromq4-haskell
  hs-source-dirs:      broker/
  default-language:    Haskell2010

test-suite specs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       bytestring,
                       QuickCheck,
                       containers,
                       fgl,
                       hspec,
                       monto-broker,
                       mtl,
                       text,
                       vector,
                       websockets
  default-language:    Haskell2010
