name:                monto-broker
version:             0.0.1
synopsis:            Haskell Broker for Monto that implements Service Dependencies.
license:             BSD3
license-file:        LICENSE
author:              Sven Keidel
maintainer:          svenkeidel@googlemail.com
category:            Editor
build-type:          Simple
cabal-version:       >=1.18
tested-with:         GHC == 7.8.3


library
  exposed-modules:     Monto.Broker,
                       Monto.CommandMessage,
                       Monto.ConfigurationMessage,
                       Monto.DependencyGraph,
                       Monto.DeregisterService,
                       Monto.DiscoverRequest,
                       Monto.DiscoverResponse,
                       Monto.DynamicDependency,
                       Monto.MessagesIDE,
                       Monto.MessagesService,
                       Monto.Options,
                       Monto.ProductDependency,
                       Monto.ProductMessage,
                       Monto.ProductDescription,
                       Monto.RegisterDynamicDependencies
                       Monto.RegisterServiceRequest,
                       Monto.RegisterServiceResponse,
                       Monto.Request,
                       Monto.ResourceManager,
                       Monto.Service,
                       Monto.SourceMessage,
                       Monto.Subscription,
                       Monto.Types

  build-depends:       base,
                       aeson,
                       aeson-casing,
                       bytestring,
                       containers,
                       fgl,
                       semigroups,
                       text,
                       vector,
                       unordered-containers
  ghc-options:         -Wall
  hs-source-dirs:      src/
  default-language:    Haskell2010

executable broker
  main-is:             Main.hs
  ghc-options:         -Wall -threaded
  build-depends:       base,
                       aeson,
                       bytestring,
                       containers,
                       fgl,
                       monto-broker,
                       optparse-applicative,
                       text,
                       transformers,
                       mtl,
                       unix,
                       vector,
                       zeromq4-haskell
  hs-source-dirs:      broker/
  default-language:    Haskell2010

test-suite specs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       aeson,
                       bytestring,
                       QuickCheck,
                       containers,
                       fgl,
                       hspec,
                       monto-broker,
                       mtl,
                       text,
                       vector
  default-language:    Haskell2010
